# dtmfcmd

./: AUTHORS  Makefile.am  README  TODO  configure.ac  dtmfcmd.bb
data/: Makefile.am  dtmfcmd.conf  dtmfcmd.state  siglaunchd.conf
docs/: howtorecord  howtorecord~
generator/: INSTALL  Makefile  README  dial.c  main.xpm
scripts/: Makefile.am  dtmfcmd_wrapper.sh  restore_state.sh  set_recording.sh
src/: Makefile.am  config.h.in  control.c  control.h  dsp.c  dsp.h  dtmfcmd.c  general_functions.c  general_functions.h  sound_info.c  sound_info.h
